--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://adelinsofrag.github.io/it-school-reactjs-playground/",
   "name": "it-school-reactjs-playground",
   "version": "0.1.0",
   "private": true,
