UI refinemets. refined LS logic to avoid duplicates. Google font fam usage and other UI changes. Added back to home & favorites buttons.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://adelinsofrag.github.io/it-school-reactjs-playground/",
+  "homepage": "",
   "name": "it-school-reactjs-playground",
   "version": "0.1.0",
   "private": true,
